--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build:
+  build-linux:
     runs-on: ubuntu-latest
 
     steps:
@@ -27,3 +27,58 @@ jobs:
       - name: Test version command
         run: |
           ./nosh --version || true
+
+  build-macos:
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Ensure Homebrew is installed
+        run: |
+          if ! command -v brew &> /dev/null; then
+            /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)";
+          fi
+
+      - name: Install dependencies
+        run: |
+          brew install gcc readline openssl
+
+      - name: Build
+        run: make
+
+      - name: Check binary exists
+        run: test -f nosh
+
+      - name: Test version command
+        run: |
+          ./nosh --version || true
+
+  build-windows:
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Ensure Chocolatey is installed
+        run: |
+          if (-not (Get-Command choco -ErrorAction SilentlyContinue)) {
+            Set-ExecutionPolicy Bypass -Scope Process -Force;
+            [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072;
+            iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'));
+          }
+
+      - name: Install dependencies
+        run: |
+          choco install -y mingw make openssl
+
+      - name: Build
+        run: |
+          make
+
+      - name: Check binary exists
+        run: if exist nosh.exe (echo Binary exists) else (exit 1)
+
+      - name: Test version command
+        run: |
+          .\nosh.exe --version || true
