--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -46,8 +46,8 @@ jobs:
 
       - name: Set OpenSSL environment variables
         run: |
-          echo 'export LDFLAGS="-L/usr/local/opt/openssl/lib"' >> $GITHUB_ENV
-          echo 'export CPPFLAGS="-I/usr/local/opt/openssl/include"' >> $GITHUB_ENV
+          echo 'LDFLAGS="-L/usr/local/opt/openssl/lib"' >> $GITHUB_ENV
+          echo 'CPPFLAGS="-I/usr/local/opt/openssl/include"' >> $GITHUB_ENV
 
       - name: Build
         run: make
