--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -46,11 +46,15 @@ jobs:
 
       - name: Set OpenSSL environment variables
         run: |
-          echo 'LDFLAGS="-L/usr/local/opt/openssl/lib"' >> $GITHUB_ENV
-          echo 'CPPFLAGS="-I/usr/local/opt/openssl/include"' >> $GITHUB_ENV
+          echo 'LDFLAGS="-L/usr/local/opt/openssl@3/lib"' >> $GITHUB_ENV
+          echo 'CPPFLAGS="-I/usr/local/opt/openssl@3/include"' >> $GITHUB_ENV
+          echo 'PKG_CONFIG_PATH="/usr/local/opt/openssl@3/lib/pkgconfig"' >> $GITHUB_ENV
 
       - name: Build
         run: make
+        env:
+          LDFLAGS: "-L/usr/local/opt/openssl@3/lib"
+          CPPFLAGS: "-I/usr/local/opt/openssl@3/include"
 
       - name: Check binary exists
         run: test -f nosh
