--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -55,6 +55,7 @@ jobs:
         env:
           LDFLAGS: "-L/usr/local/opt/openssl@3/lib"
           CPPFLAGS: "-I/usr/local/opt/openssl@3/include"
+          PKG_CONFIG_PATH: "/usr/local/opt/openssl@3/lib/pkgconfig"
 
       - name: Check binary exists
         run: test -f nosh
@@ -79,7 +80,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          choco install -y mingw make openssl
+          choco install -y mingw make openssl libedit
 
       - name: Set OpenSSL environment variables
         run: |
