--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Download and extract libsodium
         run: |
           curl -L -o libsodium.zip https://download.libsodium.org/libsodium/releases/libsodium-1.0.18-msvc.zip
-          tar -xf libsodium.zip
+          powershell -Command "Expand-Archive libsodium.zip -DestinationPath ."
           mv libsodium-1.0.18-msvc/libsodium/x64/Release/v141/dynamic libsodium
 
       - name: Set Sodium environment variables
