--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -86,7 +86,13 @@ jobs:
         run: |
           curl -L -o libsodium.zip https://download.libsodium.org/libsodium/releases/libsodium-1.0.18-msvc.zip
           powershell -Command "Expand-Archive libsodium.zip -DestinationPath ."
-          mv libsodium-1.0.18-msvc/libsodium/x64/Release/v141/dynamic libsodium
+          if (Test-Path "libsodium-1.0.18-msvc/libsodium/x64/Release/v141/dynamic") {
+            mv libsodium-1.0.18-msvc/libsodium/x64/Release/v141/dynamic libsodium
+          } elseif (Test-Path "libsodium-1.0.18-msvc/libsodium/x64/Release/v142/dynamic") {
+            mv libsodium-1.0.18-msvc/libsodium/x64/Release/v142/dynamic libsodium
+          } else {
+            Write-Error "Expected directory structure not found."
+          }
 
       - name: Set Sodium environment variables
         run: |
@@ -95,12 +101,10 @@ jobs:
           $env:LIB = "C:\Program Files\libsodium\lib"
 
       - name: Build
-        run: |
-          make
+        run: make
 
       - name: Check binary exists
         run: if exist nosh.exe (echo Binary exists) else (exit 1)
 
       - name: Test version command
-        run: |
-          .\nosh.exe --version || true
+        run: .\nosh.exe --version || true
