--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -86,12 +86,12 @@ jobs:
         run: |
           curl -L -o libsodium.zip https://download.libsodium.org/libsodium/releases/libsodium-1.0.18-msvc.zip
           powershell -Command "Expand-Archive libsodium.zip -DestinationPath ."
-          if (Test-Path "libsodium-1.0.18-msvc/libsodium/x64/Release/v141/dynamic") {
-            mv libsodium-1.0.18-msvc/libsodium/x64/Release/v141/dynamic libsodium
-          } elseif (Test-Path "libsodium-1.0.18-msvc/libsodium/x64/Release/v142/dynamic") {
-            mv libsodium-1.0.18-msvc/libsodium/x64/Release/v142/dynamic libsodium
-          } elseif (Test-Path "libsodium-1.0.18-msvc/libsodium/x64/Release/v143/dynamic") {
-            mv libsodium-1.0.18-msvc/libsodium/x64/Release/v143/dynamic libsodium
+          if (Test-Path "libsodium/libsodium/x64/Release/v141/dynamic") {
+            mv libsodium/libsodium/x64/Release/v141/dynamic libsodium
+          } elseif (Test-Path "libsodium/libsodium/x64/Release/v142/dynamic") {
+            mv libsodium/libsodium/x64/Release/v142/dynamic libsodium
+          } elseif (Test-Path "libsodium/libsodium/x64/Release/v143/dynamic") {
+            mv libsodium/libsodium/x64/Release/v143/dynamic libsodium
           } else {
             Write-Error "Expected directory structure not found."
           }
