--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -86,12 +86,9 @@ jobs:
         run: |
           curl -L -o libsodium.zip https://download.libsodium.org/libsodium/releases/libsodium-1.0.18-msvc.zip
           powershell -Command "Expand-Archive libsodium.zip -DestinationPath ."
-          if (Test-Path "libsodium/libsodium/x64/Release/v141/dynamic") {
-            mv libsodium/libsodium/x64/Release/v141/dynamic libsodium
-          } elseif (Test-Path "libsodium/libsodium/x64/Release/v142/dynamic") {
-            mv libsodium/libsodium/x64/Release/v142/dynamic libsodium
-          } elseif (Test-Path "libsodium/libsodium/x64/Release/v143/dynamic") {
-            mv libsodium/libsodium/x64/Release/v143/dynamic libsodium
+          $staticDir = Get-ChildItem -Recurse -Directory -Filter "static" | Select-Object -First 1
+          if ($staticDir) {
+            Move-Item $staticDir.FullName libsodium
           } else {
             Write-Error "Expected directory structure not found."
           }
