--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -95,12 +95,15 @@ jobs:
 
       - name: Set Sodium environment variables
         run: |
-          $env:Path += ";C:\Program Files\libsodium\bin"
-          $env:INCLUDE = "C:\Program Files\libsodium\include"
-          $env:LIB = "C:\Program Files\libsodium\lib"
+          $env:Path += ";$PWD\libsodium\bin"
+          $env:INCLUDE = "$PWD\libsodium\include"
+          $env:LIB = "$PWD\libsodium\lib"
 
       - name: Build
         run: make
+        env:
+          INCLUDE: ${{ env.INCLUDE }}
+          LIB: ${{ env.LIB }}
 
       - name: Check binary exists
         run: if exist nosh.exe (echo Binary exists) else (exit 1)
