--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -98,6 +98,8 @@ jobs:
           $env:Path += ";$PWD\libsodium\bin"
           $env:INCLUDE = "$PWD\libsodium\include"
           $env:LIB = "$PWD\libsodium\lib"
+          echo "INCLUDE=$env:INCLUDE" >> $GITHUB_ENV
+          echo "LIB=$env:LIB" >> $GITHUB_ENV
 
       - name: Build
         run: make
