--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,14 +14,14 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(SODIUM REQUIRED libsodium)
 
 # Find readline
-find_package(Readline REQUIRED)
+pkg_check_modules(READLINE REQUIRED readline)
 
 # Add executable
 add_executable(nosh ${SOURCES})
 
 # Link libraries
-target_link_libraries(nosh ${SODIUM_LIBRARIES} Readline::Readline)
-target_include_directories(nosh PRIVATE ${SODIUM_INCLUDE_DIRS})
+target_link_libraries(nosh ${SODIUM_LIBRARIES} ${READLINE_LIBRARIES})
+target_include_directories(nosh PRIVATE ${SODIUM_INCLUDE_DIRS} ${READLINE_INCLUDE_DIRS})
 
 # Install target
 install(TARGETS nosh DESTINATION /usr/local/bin)
